# snake-ai

./: agent.py  game.py  pyproject.toml  snake_game_human.py
