[project]
name = "snake-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "mypy>=1.13.0",
    "pygame>=2.6.1",
    "ruff>=0.7.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]
